--- a/pom.xml
+++ b/pom.xml
@@ -162,4 +162,9 @@
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
 
+    <properties>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
+    </properties>
+
 </project>
